--- a/templates/index.html
+++ b/templates/index.html
@@ -8,7 +8,7 @@
         <p>Möchtest du gerne eine neue Note hinzufügen oder die Übersicht deiner Noten sehen?</p>
 
         <a class="nav-item nav-link col-sm-4 mb-4 w-40 btn btn btn-lg" href="{{ url_for('input') }}" role="button" type="submit">Neue Note hinzufügen</a>
-        <a class="nav-item nav-link col-sm-4 mb-4 w-40 btn btn btn-lg" href="{{ url_for('meine_noten') }}" role="button" type="submit">Meine Übersicht</a>
+        <a class="nav-item nav-link col-sm-4 mb-4 w-40 btn btn btn-lg" href="{{ url_for('meine_noten') }}" role="button" type="submit">Meine Noten</a>
         </ul>
     </div>
 </main>
