--- a/templates/input.html
+++ b/templates/input.html
@@ -5,6 +5,8 @@
     <div class="container">
         <h1>Notenrechner</h1>
         <p class="fs-5 md-8">Behalte den Überblick über deine Module, Noten und ECTS. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.</p>
+        <p class="font-weight-bold"><i>{{ eintrag }}</i></p>
+        <form method="POST" class="was-validated">
 
 
         <hr class="col-3 col-md-2 mb-5">
@@ -14,16 +16,16 @@
         <form class="needs-validation" novalidate>
           <div class="row g-3">
             <div class="col-sm-6 mb-4">
-              <label for="Name" class="form-label font-weight-bold">Name des Moduls</label>
-              <input name="Name" type="text" class="form-control" id="Name" placeholder="Programmierung 2" value="" required>
+              <label for="name" class="form-label font-weight-bold">Name des Moduls</label>
+              <input name="name" type="text" class="form-control" id="name" placeholder="Programmierung 2">
               <div class="invalid-feedback">
                 Ungültiger Wert
               </div>
             </div>
 
             <div class="col-sm-6 mb-4">
-              <label for="ECTS" class="form-label font-weight-bold">Anzahl ECTS</label>
-              <input name="ECTS" type="text" class="form-control" id="ECTS" placeholder="4">
+              <label for="ects" class="form-label font-weight-bold">Anzahl ECTS</label>
+              <input name="ects" type="text" class="form-control" id="ects" placeholder="4">
               <div class="invalid-feedback">
                 Ungültiger Wert
               </div>
@@ -31,7 +33,7 @@
 
             <div class="col-sm-6 mb-4">
               <label for="Dozent" class="form-label font-weight-bold">Dozent</label>
-                <input name="dozent" type="text" class="form-control" id="Dozent" placeholder="Franz Müller" required>
+                <input name="dozent" type="text" class="form-control" id="Dozent" placeholder="Franz Müller">
               <div class="invalid-feedback">
                   Ungültiger Wert
                 </div>
@@ -39,7 +41,7 @@
 
             <div class="col-sm-6 mb-4">
               <label for="Leistungsnachweis" class="form-label font-weight-bold">Anzahl der Leistungsnachweise</label>
-              <input name="leistungsnachweis" type="email" class="form-control" id="Leistungsnachweis" placeholder="2">
+              <input name="leistungsnachweis" type="text" class="form-control" id="Leistungsnachweis" placeholder="2">
               <div class="invalid-feedback">
                 Ungültiger Wert
               </div>
@@ -47,7 +49,7 @@
 
             <div class="col-sm-6 mb-4">
               <label for="Semester" class="form-label font-weight-bold">Semester</label>
-              <input name="semester" type="text" class="form-control" id="Semester" placeholder="3." required>
+              <input name="semester" type="text" class="form-control" id="Semester" placeholder="3.">
               <div class="invalid-feedback">
                 Ungültiger Wert
               </div>
@@ -60,7 +62,7 @@
 
             <div class="col-sm-6 mb-4">
               <label for="Gewichtung" class="form-label font-weight-bold">Gewichtung in Prozent</label>
-              <input name="gewichtung" type="text" class="form-control" id="Gewichtung" placeholder="100" required>
+              <input name="gewichtung" type="text" class="form-control" id="Gewichtung" placeholder="100">
               <div class="invalid-feedback">
                 Ungültiger Wert
               </div>
@@ -69,64 +71,64 @@
             <div class="col-12 mb-4">
             <label class="form-label font-weight-bold">Vertiefungsrichtung</label><br>
                 <div class="form-check form-check-inline">
-                    <input name="vertiefungsrichtung" type="radio" class="form-check-input" id="category1" value="Sozial- und Methodenkompetenz">
-                    <label class="form-check-label" for="category1">Sozial- und Methodenkompetenz</label>
+                    <input name="vertiefungsrichtung" type="radio" class="form-check-input" id="Vertiefungsrichtung_1">
+                    <label class="form-check-label" for="Vertiefungsrichtung_1">Sozial- und Methodenkompetenz</label>
                 </div><br>
                 <div class="form-check form-check-inline">
-                    <input name="vertiefungsrichtung" type="radio" class="form-check-input" id="category2" value="Digital Innovation">
-                    <label class="form-check-label" for="category2">Digital Innovation</label>
+                    <input name="vertiefungsrichtung" type="radio" class="form-check-input" id="Vertiefungsrichtung_2">
+                    <label class="form-check-label" for="Vertiefungsrichtung_2">Digital Innovation</label>
                 </div><br>
                 <div class="form-check form-check-inline">
-                    <input name="vertiefungsrichtung" type="radio" class="form-check-input" id="category3" value="Information Technology">
-                    <label class="form-check-label" for="category3">Information Technology</label>
+                    <input name="vertiefungsrichtung" type="radio" class="form-check-input" id="Vertiefungsrichtung_3">
+                    <label class="form-check-label" for="Vertiefungsrichtung_3">Information Technology</label>
                 </div><br>
                 <div class="form-check form-check-inline">
-                    <input name="vertiefungsrichtung" type="radio" class="form-check-input" id="category4" value="User Experience">
-                    <label class="form-check-label" for="category3">User Experience</label>
+                    <input name="vertiefungsrichtung" type="radio" class="form-check-input" id="Vertiefungsrichtung_4">
+                    <label class="form-check-label" for="Vertiefungsrichtung_4">User Experience</label>
                 </div>
             </div>
 
             <div class="col-12">
               <label class="form-label font-weight-bold">Bewertung des Moduls</label><br>
                 <div class="form-check form-check-inline">
-                    <input type="radio" class="form-check-input" id="category1" name="bewertung" value="1">
-                    <label class="form-check-label" for="category1">1</label>
+                    <input type="radio" class="form-check-input" id="bewertung_1" name="bewertung" value="1">
+                    <label class="form-check-label" for="bewertung_1">1</label>
                 </div>
                 <div class="form-check form-check-inline">
-                    <input type="radio" class="form-check-input" id="category2" name="bewertung" value="2">
-                    <label class="form-check-label" for="category1">2</label>
+                    <input type="radio" class="form-check-input" id="bewertung_2" name="bewertung" value="2">
+                    <label class="form-check-label" for="bewertung_2">2</label>
                 </div>
                 <div class="form-check form-check-inline">
-                    <input type="radio" class="form-check-input" id="category2" name="bewertung" value="3">
-                    <label class="form-check-label" for="category1">3</label>
+                    <input type="radio" class="form-check-input" id="bewertung_3" name="bewertung" value="3">
+                    <label class="form-check-label" for="bewertung_3">3</label>
                 </div>
                 <div class="form-check form-check-inline">
-                    <input type="radio" class="form-check-input" id="category2" name="bewertung" value="4">
-                    <label class="form-check-label" for="category1">4</label>
+                    <input type="radio" class="form-check-input" id="bewertung_4" name="bewertung" value="4">
+                    <label class="form-check-label" for="bewertung_4">4</label>
                 </div>
                 <div class="form-check form-check-inline">
-                    <input type="radio" class="form-check-input" id="category2" name="bewertung" value="5">
-                    <label class="form-check-label" for="category1">5</label>
+                    <input type="radio" class="form-check-input" id="bewertung_5" name="bewertung" value="5">
+                    <label class="form-check-label" for="bewertung_5">5</label>
                 </div>
                 <div class="form-check form-check-inline">
-                    <input type="radio" class="form-check-input" id="category2" name="bewertung" value="6">
-                    <label class="form-check-label" for="category1">6</label>
+                    <input type="radio" class="form-check-input" id="bewertung_6" name="bewertung" value="6">
+                    <label class="form-check-label" for="bewertung_6">6</label>
                 </div>
                 <div class="form-check form-check-inline">
-                    <input type="radio" class="form-check-input" id="category2" name="bewertung" value="7">
-                    <label class="form-check-label" for="category1">7</label>
+                    <input type="radio" class="form-check-input" id="bewertung_7" name="bewertung" value="7">
+                    <label class="form-check-label" for="bewertung_7">7</label>
                 </div>
                 <div class="form-check form-check-inline">
-                    <input type="radio" class="form-check-input" id="category2" name="bewertung" value="8">
-                    <label class="form-check-label" for="category1">8</label>
+                    <input type="radio" class="form-check-input" id="bewertung_8" name="bewertung" value="8">
+                    <label class="form-check-label" for="bewertung_8">8</label>
                 </div>
                 <div class="form-check form-check-inline">
-                    <input type="radio" class="form-check-input" id="category2" name="bewertung" value="9">
-                    <label class="form-check-label" for="category1">9</label>
+                    <input type="radio" class="form-check-input" id="bewertung_9" name="bewertung" value="9">
+                    <label class="form-check-label" for="bewertung_9">9</label>
                 </div>
                 <div class="form-check form-check-inline">
-                    <input type="radio" class="form-check-input" id="category2" name="bewertung" value="10">
-                    <label class="form-check-label" for="category1">10</label>
+                    <input type="radio" class="form-check-input" id="bewertung_10" name="bewertung" value="10">
+                    <label class="form-check-label" for="bewertung_10">10</label>
                 </div>
             </div>
           </div>
@@ -134,9 +136,11 @@
           <hr class="my-4">
 
           <button class="w-100 btn btn-primary btn-lg" type="submit" value="submit">Note zu meinen Noten hinzufügen</button>
+        </form>
         </div>
-  </main>
+        </form>
+    </div>
+</main>
 </body>
 {% endblock %}
 {% include "footer.html" %}
-</html>
