--- a/templates/Meine_Noten.html
+++ b/templates/Meine_Noten.html
@@ -1,126 +1,42 @@
 {% include "header.html" %}
 {% block content %}
 <body>
-<div class="container-fluid">
-  <div class="row">
-    <nav id="sidebarMenu" class="col-md-3 col-lg-2 d-md-block bg-light sidebar collapse">
-      <div class="position-sticky pt-3">
-        <ul class="nav flex-column">
-          <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="#">
-              <span data-feather="home"></span>
-              Dashboard
-            </a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">
-              <span data-feather="file"></span>
-              Orders
-            </a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">
-              <span data-feather="shopping-cart"></span>
-              Products
-            </a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">
-              <span data-feather="users"></span>
-              Customers
-            </a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">
-              <span data-feather="bar-chart-2"></span>
-              Reports
-            </a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">
-              <span data-feather="layers"></span>
-              Integrations
-            </a>
-          </li>
-        </ul>
+    <main class="px-md-5">
+        <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3">
+            <h1 class="h2">Meine Noten</h1>
+        </div>
+        <br>
 
-        <h6 class="sidebar-heading d-flex justify-content-between align-items-center px-3 mt-4 mb-1 text-muted">
-          <span>Saved reports</span>
-          <a class="link-secondary" href="#" aria-label="Add a new report">
-            <span data-feather="plus-circle"></span>
-          </a>
-        </h6>
-        <ul class="nav flex-column mb-2">
-          <li class="nav-item">
-            <a class="nav-link" href="#">
-              <span data-feather="file-text"></span>
-              Current month
-            </a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">
-              <span data-feather="file-text"></span>
-              Last quarter
-            </a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">
-              <span data-feather="file-text"></span>
-              Social engagement
-            </a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">
-              <span data-feather="file-text"></span>
-              Year-end sale
-            </a>
-          </li>
-        </ul>
-      </div>
-    </nav>
-    <ul>
-    <div class="column">
-          {% if Semester %}
-          {% if user %}
-          <table class="table">
+        <table class="table">
+            <thead>
+                <tr>
+                    <th scope="col">Name</th>
+                    <th scope="col">ECTS</th>
+                    <th scope="col">Dozent</th>
+                    <th scope="col">Semester</th>
+                    <th scope="col">Note</th>
+                    <th scope="col">Vertiefungsrichtung</th>
+                    <th scope="col">Bewertung</th>
+                </tr>
+            </thead>
             <tbody>
-            {% for inhalt in user %}
-                  <tr>
-                    {% for key, value in inhalt.items() %}
-                      <td>{{ value }}</td>
-                    {% endfor %}
-                  </tr>
-            {% endfor %}
+                <!-- for-Condition -->
+                {% for key, value_dict in neuedaten.items()%}
+                    <tr>
+                        {% for key, value in value_dict.items()%}
+                        <td>{{ value }}</td>
+                        {% endfor %}
+                    </tr>
+                <!--</div>-->
+                {% endfor %}
             </tbody>
-          </table>
-          {% else %}
-          Kein Eintrag zu dieser Kategorie gefunden.
-          {% endif %}
-          {% endif %}
-    </div>
-    {% if not Semester %}
-      <div class="card-columns">
-          <!-- for-Condition -->
-          {% for key, value_dict in neuedaten.items()%}
-          <div class="card h-100">
-              <div class="card-body">
-                  {% for key2, value in value_dict.items()%}
-                  <h5 class="card-title">{{ key2 }}</h5>
-                  <p class="card-text">{{ value }}</p>
-                  {% endfor %}
-              </div>
-          </div>
-          <!--</div>-->
-          {% endfor %}
-      </div>
-      {% endif %}
-    <br>
-    </ul>
-
+        </table>
     </main>
-  </div>
-</div>
+
+
 {% endblock %}
 
 </body>
+<br>
+
 {% include "footer.html" %}
