--- a/templates/Meine_Noten.html
+++ b/templates/Meine_Noten.html
@@ -7,6 +7,59 @@
         </div>
         <br>
 
+        <form method="POST">
+            Möchtest du gerne nach einer bestimmten Kategorie filtern, wähle im Dropdown bitte die ensprechende Kategorie an.<br><br>
+            <div class="row g-3">
+                <div class="form-group col-3">
+                    <label for="inputKategorie">Vertiefungsrichtung</label>
+                    <select id="inputKategorie" class="form-control" name="vertiefungsrichtung">
+                        <option selected>Kategorie auswählen...</option>
+                        <option>Sozial- und Methodenkompetenz</option>
+                        <option>Digital Innovation</option>
+                        <option>Information Technology</option>
+                        <option>User Experience</option>
+                    </select>
+                </div>
+            </div>
+                <div class="row g-3">
+                    <div class="col">
+                        <button type="submit" class="btn btn-primary">Suchen</button>
+                        <a href="{{ url_for('meine_noten') }}" type="reset" class="btn btn-danger" role="button">Zurücksetzen</a>
+                    </div>
+                </div>
+        </form><br>
+
+        <div class="column">
+            {% if ver %}
+            {% if user %}
+            <table class="table">
+              <thead>
+                <tr>
+                    <th scope="col">Name</th>
+                    <th scope="col">ECTS</th>
+                    <th scope="col">Dozent</th>
+                    <th scope="col">Semester</th>
+                    <th scope="col">Note</th>
+                    <th scope="col">Vertiefungsrichtung</th>
+                    <th scope="col">Bewertung</th>
+                </tr>
+              </thead>
+              <tbody>
+              {% for inhalt in user %}
+                    <tr>
+                        {% for key, value in inhalt.items()%}
+                      <td>{{ value }}</td>
+                        {% endfor %}
+                    </tr>
+              {% endfor %}
+              </tbody>
+            </table>
+            {% else %}
+            Kein Eintrag zu dieser Kategorie gefunden.
+            {% endif %}
+            {% endif %}
+        </div>
+        {% if not ver %}
         <table class="table">
             <thead>
                 <tr>
@@ -30,10 +83,9 @@
                 <!--</div>-->
                 {% endfor %}
             </tbody>
+        {% endif %}
         </table>
     </main>
-
-
 {% endblock %}
 
 </body>
