--- a/templates/input.html
+++ b/templates/input.html
@@ -6,7 +6,7 @@
         <h1>Notenrechner</h1>
         <p class="fs-5 md-8">Behalte den Überblick über deine Module, Noten und ECTS. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.</p>
         <p class="font-weight-bold"><i>{{ eintrag }}</i></p>
-        <form method="POST" class="was-validated">
+        <form method="POST">
 
 
         <hr class="col-3 col-md-2 mb-5">
@@ -18,33 +18,21 @@
             <div class="col-sm-6 mb-4">
               <label for="name" class="form-label font-weight-bold">Name des Moduls</label>
               <input name="name" type="text" class="form-control" id="name" placeholder="Programmierung 2">
-              <div class="invalid-feedback">
-                Ungültiger Wert
-              </div>
             </div>
 
             <div class="col-sm-6 mb-4">
               <label for="ects" class="form-label font-weight-bold">Anzahl ECTS</label>
               <input name="ects" type="text" class="form-control" id="ects" placeholder="4">
-              <div class="invalid-feedback">
-                Ungültiger Wert
-              </div>
             </div>
 
             <div class="col-sm-6 mb-4">
               <label for="Dozent" class="form-label font-weight-bold">Dozent</label>
                 <input name="dozent" type="text" class="form-control" id="Dozent" placeholder="Franz Müller">
-              <div class="invalid-feedback">
-                  Ungültiger Wert
-                </div>
             </div>
 
             <div class="col-sm-6 mb-4">
               <label for="Semester" class="form-label font-weight-bold">Semester</label>
               <input name="semester" type="text" class="form-control" id="Semester" placeholder="3.">
-              <div class="invalid-feedback">
-                Ungültiger Wert
-              </div>
             </div>
 
             <div class="col-sm-6 mb-4">
@@ -55,19 +43,19 @@
             <div class="col-12 mb-4">
             <label class="form-label font-weight-bold">Vertiefungsrichtung</label><br>
                 <div class="form-check form-check-inline">
-                    <input name="vertiefungsrichtung" type="radio" class="form-check-input" id="Vertiefungsrichtung_1">
+                    <input name="vertiefungsrichtung" type="radio" class="form-check-input" id="Vertiefungsrichtung_1" value="Sozial- und Methodenkompetenz">
                     <label class="form-check-label" for="Vertiefungsrichtung_1">Sozial- und Methodenkompetenz</label>
                 </div><br>
                 <div class="form-check form-check-inline">
-                    <input name="vertiefungsrichtung" type="radio" class="form-check-input" id="Vertiefungsrichtung_2">
+                    <input name="vertiefungsrichtung" type="radio" class="form-check-input" id="Vertiefungsrichtung_2" value="Digital Innovation">
                     <label class="form-check-label" for="Vertiefungsrichtung_2">Digital Innovation</label>
                 </div><br>
                 <div class="form-check form-check-inline">
-                    <input name="vertiefungsrichtung" type="radio" class="form-check-input" id="Vertiefungsrichtung_3">
+                    <input name="vertiefungsrichtung" type="radio" class="form-check-input" id="Vertiefungsrichtung_3" value="Information Technology">
                     <label class="form-check-label" for="Vertiefungsrichtung_3">Information Technology</label>
                 </div><br>
                 <div class="form-check form-check-inline">
-                    <input name="vertiefungsrichtung" type="radio" class="form-check-input" id="Vertiefungsrichtung_4">
+                    <input name="vertiefungsrichtung" type="radio" class="form-check-input" id="Vertiefungsrichtung_4" value="User Experience">
                     <label class="form-check-label" for="Vertiefungsrichtung_4">User Experience</label>
                 </div>
             </div>
