--- a/templates/Meine_Noten.html
+++ b/templates/Meine_Noten.html
@@ -21,12 +21,16 @@
                     </select>
                 </div>
             </div>
-                <div class="row g-3">
-                    <div class="col">
-                        <button type="submit" class="btn btn-primary">Suchen</button>
-                        <a href="{{ url_for('meine_noten') }}" type="reset" class="btn btn-danger" role="button">Zurücksetzen</a>
-                    </div>
+            <div class="row g-3">
+                <div class="col">
+                    <button type="submit" class="btn btn-primary">Suchen</button>
+                    <a href="{{ url_for('meine_noten') }}" type="reset" class="btn btn-danger" role="button">Zurücksetzen</a>
                 </div>
+            </div>
+            <br>
+            <div>
+                <a class="nav-item nav-link col-sm-4 mb-4 w-40 btn btn btn-lg" href="{{ url_for('analyse') }}" role="button" type="submit">Noten analysieren</a>
+            </div>
         </form><br>
 
         <div class="column">
