--- a/templates/analyse.html
+++ b/templates/analyse.html
@@ -1,10 +1,11 @@
 {% include "header.html" %}
-
-<div class="cover-container d-flex w-100 h-100 p-3 mx-auto flex-column">
-
-  <main class="px-3">
-    <h1>Analyse</h1>
-  </main>
+<div class="container">
+    <div class="row">
+        <div class="col">
+            <br><h2>Statistik meiner Noten</h2>
+            {{ div|safe }}
+        </div>
+    </div>
 
 </div>
 
