--- a/templates/Meine_Noten.html
+++ b/templates/Meine_Noten.html
@@ -93,9 +93,7 @@
                 </tr>
                 <tr>
                     <th scope="row">Durchschnitt</th>
-                    {% for key, value in durchschnitt_noten.items() %}
-                    <td>{{ value }}</td>
-                    {% endfor %}
+                    <td>{{ durchschnitt }}</td>
                 </tr>
             </tfoot>
         {% endif %}
