--- a/templates/Meine_Noten.html
+++ b/templates/Meine_Noten.html
@@ -93,7 +93,12 @@
                 </tr>
                 <tr>
                     <th scope="row">Durchschnitt</th>
+                    <td></td>
+                    <td></td>
+                    <td></td>
                     <td>{{ durchschnitt }}</td>
+                    <td></td>
+                    <td>{{ bewertung }}</td>
                 </tr>
             </tfoot>
         {% endif %}
