--- a/templates/nav.html
+++ b/templates/nav.html
@@ -13,6 +13,10 @@
         <li class="nav-item">
           <a href="{{ url_for('about') }}" class="nav-link">About</a>
         </li>
+        </li>
+        <li class="nav-item">
+          <a href="{{ url_for('analyse') }}" class="nav-link">Analyse</a>
+        </li>
       </ul>
     </header>
   </div>
