--- a/templates/analyse.html
+++ b/templates/analyse.html
@@ -3,7 +3,8 @@
     <div class="row">
         <div class="col">
             <br><h2>Statistik meiner Noten</h2>
-            {{ div|safe }}
+            {{ div|safe }} <br>
+            {{ div2|safe }}
         </div>
     </div>
 
