--- a/templates/footer.html
+++ b/templates/footer.html
@@ -8,7 +8,7 @@
     <ul class="nav col-md-4 justify-content-end">
       <li class="nav-item"><a href="{{ url_for('home') }}" class="nav-link px-2 text-muted">Notenrechner</a></li>
       <li class="nav-item"><a href="{{ url_for('meine_noten') }}" class="nav-link px-2 text-muted">Meine Noten</a></li>
-      <li class="nav-item"><a href="{{ url_for('about') }}" class="nav-link px-2 text-muted">About</a></li>
+      <li class="nav-item"><a href="{{ url_for('analyse') }}" class="nav-link px-2 text-muted">Analyse</a></li>
     </ul>
   </footer>
 </div>
