--- a/templates/index.html
+++ b/templates/index.html
@@ -3,7 +3,7 @@
 <body>
 <main>
     <div class="container">
-        <h1>Notenrechner</h1>
+        <h1>Notenrechner</h1><br>
         <p class="fs-5 md-8">Behalte den Überblick über deine Module, Noten und ECTS. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.</p><br>
         <p>Möchtest du gerne eine neue Note hinzufügen oder die Übersicht deiner Noten sehen?</p>
 
