--- a/templates/analyse.html
+++ b/templates/analyse.html
@@ -1,8 +1,8 @@
 {% include "header.html" %}
 <div class="container">
     <div class="row">
-        <div class="col">
-            <br><h2>Statistik meiner Noten</h2>
+        <div class="container">
+            <h1>Statistik meiner Noten</h1>
             {{ div|safe }} <br>
             {{ div2|safe }}
         </div>
