--- a/templates/input.html
+++ b/templates/input.html
@@ -4,8 +4,8 @@
 <main>
     <div class="container">
         <h1>Noteneigabe</h1><br>
-        <p class="fs-5 md-8">Behalte den Überblick über deine Module, Noten und ECTS. </p>
-        <p class="font-weight-bold"><i>{{ eintrag }}</i></p>
+        <p>Behalte den Überblick über deine Module, Noten und ECTS. </p>
+        <p class="font-weight-bold">{{ eintrag }}</p>
         <form method="POST">
 
 
