--- a/templates/nav.html
+++ b/templates/nav.html
@@ -1,18 +1,17 @@
-  <div class="container">
-    <header class="d-flex flex-wrap justify-content-left py-3 mb-4 border-bottom">
-      <a href="/" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto text-dark text-decoration-none">
-      </a>
+<div class="container">
+  <header class="d-flex flex-wrap justify-content-left py-3 mb-4 border-bottom">
+    <a href="/" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto text-dark text-decoration-none"></a>
 
-      <ul class="nav nav-pills">
-        <li class="nav-item">
-          <a href="{{ url_for('home') }}" class="nav-link">Notenrechner</a>
-        </li>
-        <li class="nav-item">
-          <a href="{{ url_for('meine_noten') }}" class="nav-link">Meine Noten</a>
-        </li>
-        <li class="nav-item">
-          <a href="{{ url_for('analyse') }}" class="nav-link">Analyse</a>
-        </li>
-      </ul>
-    </header>
-  </div>
+    <ul class="nav nav-pills">
+      <li class="nav-item">
+        <a href="{{ url_for('home') }}" class="nav-link">Notenrechner</a>
+      </li>
+      <li class="nav-item">
+        <a href="{{ url_for('meine_noten') }}" class="nav-link">Meine Noten</a>
+      </li>
+      <li class="nav-item">
+        <a href="{{ url_for('analyse') }}" class="nav-link">Analyse</a>
+      </li>
+    </ul>
+  </header>
+</div>
