--- a/templates/analyse.html
+++ b/templates/analyse.html
@@ -2,7 +2,7 @@
 <div class="container">
     <div class="row">
         <div class="container">
-            <h1>Statistik meiner Noten</h1>
+            <h1>Statistik meiner Module</h1>
             {{ div|safe }} <br>
             {{ div2|safe }}
         </div>
